k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo
spec:
  selector:
    app: k8s-demo # Must match the labels in Deployment
  ports:
  - protocol: TCP
    port: 80 # The port exposed by the Service
    targetPort: 8080 # The port inside the container
